--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,7 +23,7 @@
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
-        android:hint="Usuario"
+        android:hint="@string/user"
         android:inputType="text"
         android:textColor="@color/black"
         android:textSize="20sp"
@@ -43,7 +43,7 @@
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
-        android:hint="Contraseña"
+        android:hint="@string/password"
         android:inputType="textPassword"
         android:textColor="@color/black"
         android:textSize="20sp"
@@ -52,7 +52,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/cbShowPassword"
-        android:text="Mostrar Contraseña"
+        android:text="@string/show_password"
         android:textColor="@color/black"
         android:layout_marginTop="8dp"
         android:layout_marginStart="8dp"
@@ -77,7 +77,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginRight="8dp"
-            android:text="Guardar Datos de Sesión"
+            android:text="@string/save_session"
             android:textColor="@color/black"
             android:textSize="20sp"
             android:checked="false"
@@ -92,7 +92,7 @@
         android:layout_marginBottom="8dp"
         android:layout_marginTop="8dp"
         android:textStyle="bold|italic"
-        android:text="Login"
+        android:text="@string/dologin"
         android:textColor="@color/white"
         android:textSize="20sp"
         android:background="#F44336"
@@ -106,7 +106,7 @@
         android:layout_marginBottom="8dp"
         android:layout_marginTop="8dp"
         android:textStyle="bold|italic"
-        android:text="Registrar"
+        android:text="@string/doregister"
         android:textColor="@color/white"
         android:textSize="20sp"
         android:background="#F44336"
