--- a/app/src/main/res/layout/register_activity.xml
+++ b/app/src/main/res/layout/register_activity.xml
@@ -20,7 +20,7 @@
             android:textColor="@color/white"
             android:textStyle="bold|italic"
             android:textSize="40dp"
-            android:text="Registro"/>
+            android:text="@string/register"/>
     </LinearLayout>
 
     <LinearLayout
@@ -30,28 +30,28 @@
         android:orientation="vertical">
     <EditText
         android:id="@+id/editTextUserRegister"
-        android:layout_width="match_parent"
+        android:layout_width="395dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
-        android:hint="Usuario"
+        android:hint="@string/user"
         android:inputType="text"
         android:textColor="@color/black"
         android:textSize="20sp"
         android:autofillHints="" />
     <EditText
         android:id="@+id/editTextPasswordRegister"
-        android:layout_width="match_parent"
+        android:layout_width="395dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
-        android:hint="Contraseña"
+        android:hint="@string/password"
         android:inputType="textPassword"
         android:textColor="@color/black"
         android:textSize="20sp"
@@ -60,7 +60,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/cbShowPasswordRegister"
-        android:text="Mostrar Contraseña"
+        android:text="@string/show_password"
         android:textColor="@color/black"
         android:layout_marginTop="8dp"
         android:layout_marginStart="8dp"
@@ -71,13 +71,12 @@
         android:id="@+id/buttonDoRegister"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
+        android:layout_marginLeft="4dp"
+        android:layout_marginRight="4dp"
         android:layout_marginBottom="8dp"
         android:layout_marginTop="8dp"
         android:textStyle="bold|italic"
-        android:text="Registrar"
+        android:text="@string/do_register"
         android:textColor="@color/white"
         android:textSize="20sp"
         android:background="#F44336"
